--- a/style.css
+++ b/style.css
@@ -220,9 +220,9 @@ main {
   font-size: 12px;
   width: 100%;
   height: 50%;
-  z-index: 10;
   transform: rotateX(60deg);
   user-select: none;
+  color: #000;
 }
 #slot_spin_button {
   margin: auto;
@@ -231,7 +231,6 @@ main {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 5;
 }
 #slot_spin_button div {
   position: absolute;
