--- a/style.css
+++ b/style.css
@@ -210,8 +210,9 @@ main {
   margin-bottom: 2.5%;
 }
 #slot_spin_text {
-  position: relative;
+  /* position: relative; */
   margin: 0;
+  margin-top: 2%;
   text-align: center;
   top: 5%;
   left: 0;
@@ -222,7 +223,8 @@ main {
   height: 50%;
   transform: rotateX(60deg);
   user-select: none;
-  color: #000;
+  color: white;
+  z-index: 200;
 }
 #slot_spin_button {
   margin: auto;
