--- a/style.css
+++ b/style.css
@@ -178,7 +178,6 @@ main {
   height: 100%;
   text-align: center;
   transform-style: preserve-3d;
-  transition: transform 5s;
   opacity: 0;
 }
 .spinner_screen_option {
@@ -210,9 +209,8 @@ main {
   margin-bottom: 2.5%;
 }
 #slot_spin_text {
-  /* position: relative; */
+  position: absolute;
   margin: 0;
-  margin-top: 2%;
   text-align: center;
   top: 5%;
   left: 0;
@@ -223,16 +221,16 @@ main {
   height: 50%;
   transform: rotateX(60deg);
   user-select: none;
-  color: white;
+  color: rgb(255, 230, 0);
   z-index: 200;
 }
 #slot_spin_button {
   margin: auto;
-  position: absolute;
+  /* position: relative; */
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
+  /* top: 0; */
+  /* left: 0; */
 }
 #slot_spin_button div {
   position: absolute;
