--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ main {
   height: 100%;
   text-align: center;
   transform-style: preserve-3d;
+  transition: transform 5s;
   opacity: 0;
 }
 .spinner_screen_option {
@@ -209,8 +210,9 @@ main {
   margin-bottom: 2.5%;
 }
 #slot_spin_text {
-  position: absolute;
+  /* position: relative; */
   margin: 0;
+  margin-top: 2%;
   text-align: center;
   top: 5%;
   left: 0;
@@ -221,16 +223,16 @@ main {
   height: 50%;
   transform: rotateX(60deg);
   user-select: none;
-  color: rgb(255, 230, 0);
+  color: white;
   z-index: 200;
 }
 #slot_spin_button {
   margin: auto;
-  /* position: relative; */
+  position: absolute;
   width: 100%;
   height: 100%;
-  /* top: 0; */
-  /* left: 0; */
+  top: 0;
+  left: 0;
 }
 #slot_spin_button div {
   position: absolute;
