--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ main {
   font-size: 15px;
   color: #feeacb;
   text-shadow: 0 0 5px #e1860d, 0 0 10px #e1860d, 0 0 15px #e1860d,
-    0 0 20px #ab6126, 0 0 25px #ab6126, 0 0 30px #ab6126, 0 0 35px #ab6126;
+    0 0 20px #ab6126, 0 0 25px #ab6126;
 }
 .spinner_logo:last-of-type {
   text-shadow: 0 0 5px #e1860d, 0 0 10px #e1860d, 0 0 15px #e1860d,
@@ -268,16 +268,16 @@ main {
   font-size: 12px;
   width: 100%;
   height: 50%;
+  transform: rotateX(60deg);
   -ms-transform: rotateX(60deg);
   -moz-transform: rotateX(60deg);
   -o-transform: rotateX(60deg);
   -webkit-transform: rotateX(60deg);
-  transform: rotateX(60deg);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: #000;
+  color: white;
   z-index: 200;
 }
 #slot_spin_button {
