--- a/style.css
+++ b/style.css
@@ -268,17 +268,17 @@ main {
   font-size: 12px;
   width: 100%;
   height: 50%;
-  transform: rotateX(60deg);
   -ms-transform: rotateX(60deg);
   -moz-transform: rotateX(60deg);
   -o-transform: rotateX(60deg);
   -webkit-transform: rotateX(60deg);
+  transform: rotateX(60deg);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: white;
-  z-index: 200;
+  color: rgb(232, 252, 53);
+  /* z-index: 200; */
 }
 #slot_spin_button {
   margin: auto;
