--- a/style.css
+++ b/style.css
@@ -268,16 +268,16 @@ main {
   font-size: 12px;
   width: 100%;
   height: 50%;
-  -ms-transform: rotateX(60deg);
+  /* -ms-transform: rotateX(60deg);
   -moz-transform: rotateX(60deg);
   -o-transform: rotateX(60deg);
   -webkit-transform: rotateX(60deg);
-  transform: rotateX(60deg);
+  transform: rotateX(60deg); */
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: rgb(232, 252, 53);
+  color: rgb(93, 252, 53);
   /* z-index: 200; */
 }
 #slot_spin_button {
@@ -512,11 +512,11 @@ main {
   }
   #slot_spin_text {
     font-size: 30px;
-    -ms-transform: rotateX(50deg);
+    /* -ms-transform: rotateX(50deg);
     -moz-transform: rotateX(50deg);
     -o-transform: rotateX(50deg);
     -webkit-transform: rotateX(50deg);
-    transform: rotateX(50deg);
+    transform: rotateX(50deg); */
   }
   #recipe_wrapper {
     width: 539px;
