--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ main {
   margin-bottom: 2.5%;
 }
 #slot_spin_text {
-  position: relative;
+  position: absolute;
   margin: 0;
   text-align: center;
   top: 5%;
@@ -268,21 +268,22 @@ main {
   font-size: 12px;
   width: 100%;
   height: 50%;
-  /* -ms-transform: rotateX(60deg);
+  -webkit-transform-origin: center;
+  -ms-transform: rotateX(60deg);
   -moz-transform: rotateX(60deg);
   -o-transform: rotateX(60deg);
   -webkit-transform: rotateX(60deg);
-  transform: rotateX(60deg); */
+  transform: rotateX(60deg);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: rgb(93, 252, 53);
+  color: rgb(185, 166, 255);
   /* z-index: 200; */
 }
 #slot_spin_button {
   margin: auto;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   top: 0;
@@ -512,11 +513,12 @@ main {
   }
   #slot_spin_text {
     font-size: 30px;
-    /* -ms-transform: rotateX(50deg);
+    -webkit-transform-origin: center;
+    -ms-transform: rotateX(50deg);
     -moz-transform: rotateX(50deg);
     -o-transform: rotateX(50deg);
     -webkit-transform: rotateX(50deg);
-    transform: rotateX(50deg); */
+    transform: rotateX(50deg);
   }
   #recipe_wrapper {
     width: 539px;
