--- a/style.css
+++ b/style.css
@@ -216,6 +216,10 @@ main {
   left: 0;
   width: 100%;
   height: 50%;
+  -moz-transform: rotateX(60deg);
+  -ms-transform: rotateX(60deg);
+  -o-transform: rotateX(60deg);
+  -webkit-transform: rotateX(60deg);
   transform: rotateX(60deg);
 }
 #slot_spin_text {
@@ -225,6 +229,7 @@ main {
   font-size: 12px;
   z-index: 10;
   user-select: none;
+  color: white;
 }
 #slot_spin_button {
   margin: auto;
@@ -428,6 +433,10 @@ main {
     filter: blur(0.8px);
   }
   #slot_spin_text_wrapper {
+    -moz-transform: rotateX(50deg);
+    -ms-transform: rotateX(50deg);
+    -o-transform: rotateX(50deg);
+    -webkit-transform: rotateX(50deg);
     transform: rotateX(50deg);
   }
   #slot_spin_text {
