--- a/style.css
+++ b/style.css
@@ -216,11 +216,11 @@ main {
   left: 0;
   width: 100%;
   height: 50%;
-  -moz-transform: rotateX(60deg);
+  /* -moz-transform: rotateX(60deg);
   -ms-transform: rotateX(60deg);
   -o-transform: rotateX(60deg);
   -webkit-transform: rotateX(60deg);
-  transform: rotateX(60deg);
+  transform: rotateX(60deg); */
 }
 #slot_spin_text {
   margin: 0;
@@ -229,7 +229,7 @@ main {
   font-size: 12px;
   z-index: 10;
   user-select: none;
-  color: white;
+  color: #000;
 }
 #slot_spin_button {
   margin: auto;
@@ -433,11 +433,11 @@ main {
     filter: blur(0.8px);
   }
   #slot_spin_text_wrapper {
-    -moz-transform: rotateX(50deg);
+    /* -moz-transform: rotateX(50deg);
     -ms-transform: rotateX(50deg);
     -o-transform: rotateX(50deg);
     -webkit-transform: rotateX(50deg);
-    transform: rotateX(50deg);
+    transform: rotateX(50deg); */
   }
   #slot_spin_text {
     font-size: 30px;
