--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ main {
   font-size: 15px;
   color: #feeacb;
   text-shadow: 0 0 5px #e1860d, 0 0 10px #e1860d, 0 0 15px #e1860d,
-    0 0 20px #ab6126, 0 0 25px #ab6126, 0 0 30px #ab6126, 0 0 35px #ab6126;
+    0 0 20px #ab6126, 0 0 25px #ab6126;
 }
 .spinner_logo:last-of-type {
   text-shadow: 0 0 5px #e1860d, 0 0 10px #e1860d, 0 0 15px #e1860d,
@@ -212,21 +212,16 @@ main {
 #slot_spin_text_wrapper {
   position: absolute;
   text-align: center;
-  top: 5%;
+  top: 9%;
   left: 0;
   width: 100%;
   height: 50%;
-  /* -moz-transform: rotateX(60deg);
-  -ms-transform: rotateX(60deg);
-  -o-transform: rotateX(60deg);
-  -webkit-transform: rotateX(60deg);
-  transform: rotateX(60deg); */
 }
 #slot_spin_text {
   margin: 0;
   font-family: Creepster, cursive;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 10px;
   z-index: 10;
   user-select: none;
   color: #000;
@@ -396,12 +391,12 @@ main {
   fill: #fff;
 }
 
-@media (min-width: 370px) {
+@media (min-width: 380px) {
   #slot_spin_text {
-    font-size: 16px;
+    font-size: 13px;
   }
 }
-@media (min-width: 420px) {
+@media (min-width: 515px) {
   .spinner_logo {
     font-size: 21px;
   }
@@ -409,10 +404,10 @@ main {
     font-size: 22px;
   }
   #slot_spin_text {
-    font-size: 17px;
+    font-size: 16px;
   }
 }
-@media (min-width: 566px) {
+@media (min-width: 620px) {
   .spinner_logo {
     font-size: 32px;
   }
@@ -431,13 +426,6 @@ main {
   .spinner_logo {
     font-size: 50px;
     filter: blur(0.8px);
-  }
-  #slot_spin_text_wrapper {
-    /* -moz-transform: rotateX(50deg);
-    -ms-transform: rotateX(50deg);
-    -o-transform: rotateX(50deg);
-    -webkit-transform: rotateX(50deg);
-    transform: rotateX(50deg); */
   }
   #slot_spin_text {
     font-size: 30px;
